--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,6 +1,25 @@
-<div class="signin">
-  <h1>Welcome Knock Knock</h1>
-  <div class="btn">
-    <a href="/users/signin">Sign In </a><a href="/users/signup">Sign Up</a>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/base.css">
+  <link rel="stylesheet" href="/css/display.css">
+  <link rel="stylesheet" href="/css/welcome.css">
+
+  <title>Document</title>
+</head>
+
+<body class="flex jC-center aI-center">
+  <div id="welcome">
+    <img class="flex jC-center" style="padding: 30px; height:30px;" src="/image/logo_knock.png" alt="">
+    <div class="flex jC-sE">
+      <a class="base-btn" href="/users/signin">Sign In</a>
+      <a class="base-btn" href="/users/signup">Sign Up</a>
+    </div>
   </div>
-</div>
+
+</body>
+
+</html>
