--- a/views/users/user.ejs
+++ b/views/users/user.ejs
@@ -1,30 +1,56 @@
-<h2> Show user </h2>
-<table border="1">
-    <caption align="top">DANH SÁCH USER</caption>
-    <tr>
-        <th>ID</th>
-        <th>username</th>
-        <th>Password   </th>
-        <th>Role</th>
-    </tr>
-    <% user.forEach(u => { %> 
-    <tr>    
-        <td><%- u.id%></td>
-        <td><%- u.username%></td>
-        <td><%- u.password%></td>
-        <td><%- u.role%></td>
-    <% }) %>
-    </tr> 
-</table>
-<br>
-<form action="allusers" method="POST">
-    <select name="ID">
-        <% user.forEach(u => { %> 
-            <option value=<%- u.id%>><%- u.id %></option>
-        <% }) %>
-    </select>  &nbsp
-    <input type="radio" name="setrole" value=0 checked> 0
-    <input type="radio" name="setrole" value=1> 1
-    <input type="radio" name="setrole" value=2> 2 &nbsp
-    <button class="btn" type="submit">Set role</button>
-</form>    
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/users.css">
+    <link rel="stylesheet" href="/css/display.css">
+
+    <title>Document</title>
+</head>
+
+<body class="flex jC-center aI-center fD-column">
+    <!-- <h2> LIST USER </h2> -->
+    <table>
+        <caption>LIST USER</caption>
+        <tr>
+            <th>ID</th>
+            <th>username</th>
+            <th>Password </th>
+            <th>Role</th>
+        </tr>
+        <% user.forEach(u=> { %>
+            <tr>
+                <td>
+                    <%- u.id%>
+                </td>
+                <td>
+                    <%- u.username%>
+                </td>
+                <td>
+                    <%- u.password%>
+                </td>
+                <td>
+                    <%- u.role%>
+                </td>
+                <% }) %>
+            </tr>
+    </table>
+    <br>
+    <form class="flex jC-sB aI-center" id="form-role" action="allusers" method="POST">
+        <select name="ID">
+            <% user.forEach(u=> { %>
+                <option value=<%- u.username%>><%- u.username %>
+                </option>
+                <% }) %>
+        </select> &nbsp
+        <input type="radio" name="setrole" value=0 checked> <span>0</span> 
+        <input type="radio" name="setrole" value=1> <span>1</span> 
+        <input type="radio" name="setrole" value=2> <span>2</span> 
+        <button class="base-btn" type="submit">Set role</button>
+    </form>
+</body>
+
+</html>
