--- a/views/controll/home.ejs
+++ b/views/controll/home.ejs
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/display.css">
+    <link rel="stylesheet" href="/css/homepage.css">
     <title>Document</title>
 </head>
-<body>
+<body class="flex jC-center aI-center">
     <script>
         window.WebSocket = window.WebSocket
         var connection = new WebSocket("ws://anlozrer.duckdns.org:33000/");
@@ -17,38 +20,21 @@
 
         };
         connection.onmessage = function(msg){
-            if(msg.data == "CUA DANG DONG" || msg.data == 'CUA DANG MO'){
-            document.getElementById("statedoor").innerText = msg.data;
-            }
-            else
-            {
-                document.getElementById("command").innerHTML = msg.data;
-                if(msg.data == "close" ) document.getElementById("controllbutton").innerText = "open";
-                else document.getElementById("controllbutton").innerText = "close";
-            }
-          
+            document.getElementById("statedoor").innerHTML = msg.data;
         }
-        
-        let cmo = {
-            dv : "D",
-            st : "open"
-        };
+         
+        let cmo = "{ \"dv\" : \"D\", \"st\" : \"MOCUACHOBO\" }";
         
         let cmc = {
             dv : "D",
-            st : "close"
+            st : "MOCUACHOBO"
         };
-        function buttonOnclick(etc) {
-            let state = etc.innerText;
-            if(state == "open") connection.send(JSON.stringify(cmo))
-            else connection.send(JSON.stringify(cmc))
-        }
-          //connection.send()
+        
+          //connection.send()*/
     </script>
     <p id = 'statedoor'></p>
-    <button id = "controllbutton" onclick="buttonOnclick(this)">
-        open
+    <button class="base-btn" id="OC-btn" onclick=connection.send(cmo)>
+        OPEN / CLOSE  
     </button>
-    <p id = 'command'></p>
 </body>
 </html>
