--- a/views/controll/home.ejs
+++ b/views/controll/home.ejs
@@ -20,17 +20,33 @@
 
         };
         connection.onmessage = function(msg){
-            document.getElementById("statedoor").innerHTML = msg.data;
+            if(msg.data == "CUA DANG DONG" || msg.data == 'CUA DANG MO'){
+            document.getElementById("statedoor").innerText = msg.data;
+            }
+            else
+            {
+                document.getElementById("command").innerHTML = msg.data;
+                if(msg.data == "close" ) document.getElementById("controllbutton").innerText = "open";
+                else document.getElementById("controllbutton").innerText = "close";
+            }
+          
         }
-         
-        let cmo = "{ \"dv\" : \"D\", \"st\" : \"MOCUACHOBO\" }";
+        
+        let cmo = {
+            dv : "D",
+            st : "open"
+        };
         
         let cmc = {
             dv : "D",
-            st : "MOCUACHOBO"
+            st : "close"
         };
-        
-          //connection.send()*/
+        function buttonOnclick(etc) {
+            let state = etc.innerText;
+            if(state == "open") connection.send(JSON.stringify(cmo))
+            else connection.send(JSON.stringify(cmc))
+        }
+          //connection.send()
     </script>
     <p id = 'statedoor'></p>
     <button class="base-btn" id="OC-btn" onclick=connection.send(cmo)>
