--- a/views/users/editUsers.ejs
+++ b/views/users/editUsers.ejs
@@ -1,9 +1,9 @@
 <body>
     <div class="center">
     <h3>Update user</h3>
-    <form action="update" method="POST">
+    <form method="POST">
         <div class="field">
-            <div class="label" for="username">New user name</div>
+            <div class="label" for="username">New username</div>
             <input type="text" name="username" placeholder="type" />
         </div>    
         <div class="field">
