--- a/views/users/user.ejs
+++ b/views/users/user.ejs
@@ -40,7 +40,7 @@
     </table>
     <br>
     <form class="flex jC-sB aI-center" id="form-role" action="allusers" method="POST">
-        <select name="ID">
+        <select name="username">
             <% user.forEach(u=> { %>
                 <option value=<%- u.username%>><%- u.username %>
                 </option>
