--- a/views/controll/home.ejs
+++ b/views/controll/home.ejs
@@ -1,56 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/base.css">
-    <link rel="stylesheet" href="/css/display.css">
-    <link rel="stylesheet" href="/css/homepage.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/base.css" />
+    <link rel="stylesheet" href="/css/display.css" />
+    <link rel="stylesheet" href="/css/homepage.css" />
+    <!-- <script src="./controll.js"></script> -->
     <title>Document</title>
-</head>
-<body class="flex jC-center aI-center">
+  </head>
+  <body class="flex jC-center aI-center">
     <script>
-        window.WebSocket = window.WebSocket
-        var connection = new WebSocket("ws://anlozrer.duckdns.org:33000/");
-        connection.onopen = function(){
-
-        };
-        connection.onerror = function(error){
-
-        };
-        connection.onmessage = function(msg){
-            if(msg.data == "CUA DANG DONG" || msg.data == 'CUA DANG MO'){
-            document.getElementById("statedoor").innerText = msg.data;
-            }
-            else
-            {
-                document.getElementById("command").innerHTML = msg.data;
-                if(msg.data == "close" ) document.getElementById("controllbutton").innerText = "open";
-                else document.getElementById("controllbutton").innerText = "close";
-            }
-          
+      window.WebSocket = window.WebSocket;
+      var connection = new WebSocket("ws://anlozrer.duckdns.org:33000/");
+      connection.onopen = function () {};
+      connection.onerror = function (error) {};
+      connection.onmessage = function (msg) {
+        if (msg.data == "CUA DANG DONG" || msg.data == "CUA DANG MO") {
+          document.getElementById("statedoor").innerText = msg.data;
+        } else {
+          // document.getElementById("command").innerHTML = msg.data;
+          if (msg.data == "close")
+            document.getElementById("OC-btn").innerText = "open";
+          else document.getElementById("OC-btn").innerText = "close";
         }
-        
-        let cmo = {
-            dv : "D",
-            st : "open"
-        };
-        
-        let cmc = {
-            dv : "D",
-            st : "close"
-        };
-        function buttonOnclick(etc) {
-            let state = etc.innerText;
-            if(state == "open") connection.send(JSON.stringify(cmo))
-            else connection.send(JSON.stringify(cmc))
-        }
-          //connection.send()
+      };
+
+      let cmo = {
+        dv: "L",
+        st: "open",
+      };
+
+      let cmc = {
+        dv: "L",
+        st: "close",
+      };
+      function buttonOnclick(event) {
+        let state = event.target.innerText;
+        if (state.toLowerCase() == "open") {
+          connection.send(JSON.stringify(cmo));
+        } else connection.send(JSON.stringify(cmc));
+      }
     </script>
-    <p id = 'statedoor'></p>
-    <button class="base-btn" id="OC-btn" onclick=connection.send(cmo)>
-        OPEN / CLOSE  
-    </button>
-</body>
+    <p id="statedoor"></p>
+    <button class="base-btn" id="OC-btn" onclick="buttonOnclick(event)">open</button>
+  </body>
 </html>
