--- a/views/controll/home.ejs
+++ b/views/controll/home.ejs
@@ -10,6 +10,7 @@
     <!-- <script src="./controll.js"></script> -->
     <title>Document</title>
   </head>
+
   <body class="flex jC-center aI-center">
     <script>
       window.WebSocket = window.WebSocket;
@@ -43,7 +44,17 @@
         } else connection.send(JSON.stringify(cmc));
       }
     </script>
+    <nav class="flex jC-fS aI-center nav-bar">
+      <img class="flex jC-center" style="height:20px; margin-right: 10px;" src="/image/logo_knock_white.png" alt="">
+      <% if(isAdmin){ %>
+        <a href="/users/allusers" class="base-btn nav-btn">manage user</a>
+        <% } %>
+      <form action="logout" method="POST">
+        <button class="base-btn nav-btn" id="logout-btn" type="submit">Log Out</button>
+      </form>
+    </nav>
     <p id="statedoor"></p>
+    
     <button class="base-btn" id="OC-btn" onclick="buttonOnclick(event)">open</button>
   </body>
 </html>
