--- a/views/controll/home.ejs
+++ b/views/controll/home.ejs
@@ -11,7 +11,7 @@
     <title>Document</title>
   </head>
 
-  <body class="flex jC-center aI-center">
+  <body class="flex jC-center aI-center fD-column">
     <script>
       window.WebSocket = window.WebSocket;
       var connection = new WebSocket("ws://anlozrer.duckdns.org:33000/");
@@ -54,7 +54,6 @@
       </form>
     </nav>
     <p id="statedoor"></p>
-    
     <button class="base-btn" id="OC-btn" onclick="buttonOnclick(event)">open</button>
   </body>
 </html>
