--- a/views/users/editUsers.ejs
+++ b/views/users/editUsers.ejs
@@ -1,17 +1,32 @@
-<body>
-    <div class="center">
-    <h3>Update user</h3>
-    <form method="POST">
-        <div class="field">
-            <div class="label" for="username">New username</div>
-            <input type="text" name="username" placeholder="type" />
-        </div>    
-        <div class="field">
-            <div class="label" for="password">New password</div>
-            <input type="password" name="password" placeholder="type" />
-        </div>
-        <br>
-        <button class="btn" type="submit">Update</button>
-    </form>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/display.css">
+    <link rel="stylesheet" href="/css/signin.css">
+    <title>Sign In</title>
+</head>
+
+<body class="flex jC-center aI-center">
+    <div id="sign-in">
+        <h3 class="flex jC-center aI-center">Update</h3>
+        <form class="flex jC-center fD-column" action="/users/<%- id%>/edit" method="POST">
+            <div class="flex jC-sB aI-center base-input">
+                <label class="label" for="username">Username</label>
+                <input type="text" name="username" placeholder="name" value=<%- username%> >
+            </div>
+            <div class="flex jC-sB aI-center base-input">
+                <label class="label" for="password">Password</label>
+                <input type="text" name="password" placeholder="password" value=<%- password%>>
+            </div>
+            <div class="flex jC-sB aI-center base-input">
+                <label class="label" for="role">Role</label>
+                <input type="number" name="role" placeholder="role" value=<%- role%>>
+            </div>
+            <button class="base-btn" type="submit">Update</button>
+        </form>
     </div>
 </body>
