--- a/views/controll/home.ejs
+++ b/views/controll/home.ejs
@@ -49,7 +49,7 @@
       <% if(isAdmin){ %>
         <a href="/users/allusers" class="base-btn nav-btn">manage user</a>
         <% } %>
-      <form action="logout" method="POST">
+      <form action="/users/logout" method="POST">
         <button class="base-btn nav-btn" id="logout-btn" type="submit">Log Out</button>
       </form>
     </nav>
