--- a/public/css/users.css
+++ b/public/css/users.css
@@ -23,35 +23,14 @@ caption{
 }
 .base-btn{
     font-size: 14px;
+}
+
+.action-btn{
+    margin: 2px;
     padding: 4px 4px;
 }
 
-#form-role{
-    height: 30px;
-    /* flex-basis: 100%; */
-}
-
-#form-role input[type=radio]{
+.base-input input[type=radio]{
     outline: none;
-    margin-left: 5px;
-}
-
-#form-role span{
-    margin-right: 5px;
-}
-
-#form-role select {
-    outline: none;
-    font-size: 15px;
-    padding: 2px 2px;
-    border-radius: 4px;
-  
-}
-#form-role select:focus{
-    border: 2px solid #9f88f1;
-}
-#form-role select option{
-    font-size: 15px;
-    padding: 2px 4px;
-    border-radius: 5px;
+    margin-left: 10px;
 }
