--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -15,8 +15,8 @@
   <div id="welcome">
     <img class="flex jC-center" style="padding: 30px; height:30px;" src="/image/logo_knock.png" alt="">
     <div class="flex jC-sE">
-      <a class="base-btn" href="/users/signin">Sign In</a>
-      <a class="base-btn" href="/users/signup">Sign Up</a>
+      <a class="base-btn" href="/users/signin">Đăng nhập</a>
+      <a class="base-btn" href="/users/signup">Đăng ký</a>
     </div>
   </div>
 
