--- a/views/users/user.ejs
+++ b/views/users/user.ejs
@@ -17,20 +17,20 @@
     <nav class="flex jC-fS aI-center nav-bar">
         <img class="flex jC-center" style="height:20px; margin-right: 10px;" src="/image/logo_knock_white.png" alt="">
 
-        <a href="/users/" class="base-btn nav-btn">controll door</a>
+        <a href="/users/" class="base-btn nav-btn">điều khiển</a>
      
         <form action="logout" method="POST">
-          <button class="base-btn nav-btn" id="logout-btn" type="submit">Log Out</button>
+          <button class="base-btn nav-btn" id="logout-btn" type="submit">ĐĂNG XUẤT</button>
         </form>
     </nav>
     <table>
-        <caption>LIST USER</caption>
+        <caption>DANH SÁCH NGƯỜI DÙNG</caption>
         <tr>
             <th>ID</th>
-            <th>username</th>
-            <th>Password </th>
-            <th>Role</th>
-            <th>Action</th>
+            <th>Tên</th>
+            <th>Mật khẩu </th>
+            <th>Quyền</th>
+            <th></th>
         </tr>
         <% user.forEach(u=> { %>
             <tr>
@@ -52,19 +52,19 @@
                             admin
                             <% break;
                         default: %>
-                            no role
+                            
                             <% break;
                     } %>
                 </td>
                 <td class="flex jC-sB aI-center">
-                    <a class="base-btn action-btn" href="/users/<%- u.id%>/delete">delete</button>
-                    <a class="base-btn action-btn" href="/users/<%- u.id%>/edit">edit</a>
+                    <a class="base-btn action-btn" href="/users/<%- u.id%>/delete">xóa</button>
+                    <a class="base-btn action-btn" href="/users/<%- u.id%>/edit">sửa</a>
                 </td>
                 <% }) %>
             </tr>
     </table>
     <br>
-    <a class="base-btn" id="create-btn" href="/users/create">create</a>
+    <a class="base-btn" id="create-btn" href="/users/create">Thêm mới</a>
 </body>
 
 </html>
