--- a/views/users/user.ejs
+++ b/views/users/user.ejs
@@ -17,7 +17,7 @@
     <nav class="flex jC-fS aI-center nav-bar">
         <img class="flex jC-center" style="height:20px; margin-right: 10px;" src="/image/logo_knock_white.png" alt="">
 
-        <a href="/users/" class="base-btn nav-btn">điều khiển</a>
+        <a href="/users/controll" class="base-btn nav-btn">điều khiển</a>
      
         <form action="logout" method="POST">
           <button class="base-btn nav-btn" id="logout-btn" type="submit">ĐĂNG XUẤT</button>
