--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -1,3 +1,7 @@
+.content-wrapper{
+    height: calc(100% - 55px);
+}
+
 #OC-btn {
     font-weight: 700;
     font-size: 25px;
@@ -9,8 +13,8 @@
     box-sizing: border-box;
     padding: 5px 10px;
     padding-right: 0;
-    position: absolute;
-    top: 0;
+    top:0;
+    position: sticky;
     background-color: #9f88f1;
     height: 50px;
     width: 100%;
@@ -23,18 +27,12 @@
     border-radius: unset;
     height: 50px;
     padding: auto 10px;
-    /* font-size: 1.2em; */
-    /* position: absolute; */
-    /* right: 0; */
-    /* top: 100px */
 }
 
 .nav-btn:hover {
     background-color: #b3a2f0;
 
 }
-
-
 
 #logout-btn {
     position: absolute;
