--- a/views/users/user.ejs
+++ b/views/users/user.ejs
@@ -13,25 +13,30 @@
     <title>Document</title>
 </head>
 
-<body class="flex jC-center aI-center fD-column">
+<body class="flex aI-center fD-column">
     <nav class="flex jC-fS aI-center nav-bar">
         <img class="flex jC-center" style="height:20px; margin-right: 10px;" src="/image/logo_knock_white.png" alt="">
-
+    
         <a href="/users/controll" class="base-btn nav-btn">điều khiển</a>
      
         <form action="logout" method="POST">
           <button class="base-btn nav-btn" id="logout-btn" type="submit">ĐĂNG XUẤT</button>
         </form>
     </nav>
+    <div class="content-wrapper flex fD-column aI-center">
+    <h2 style="margin: 10px auto">DANH SÁCH NGƯỜI DÙNG</h2>
+    <div id="table-wrapper">
     <table>
-        <caption>DANH SÁCH NGƯỜI DÙNG</caption>
-        <tr>
-            <th>ID</th>
-            <th>Tên</th>
-            <th>Mật khẩu </th>
-            <th>Quyền</th>
-            <th></th>
-        </tr>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Tên</th>
+                <th>Mật khẩu </th>
+                <th>Quyền</th>
+                <th></th>
+            </tr>
+        </thead>
+        
         <% user.forEach(u=> { %>
             <tr>
                 <td>
@@ -56,15 +61,17 @@
                             <% break;
                     } %>
                 </td>
-                <td class="flex jC-sB aI-center">
+                <td class="flex aI-center">
                     <a class="base-btn action-btn" href="/users/<%- u.id%>/delete">xóa</button>
                     <a class="base-btn action-btn" href="/users/<%- u.id%>/edit">sửa</a>
                 </td>
                 <% }) %>
             </tr>
     </table>
-    <br>
+    </div>
     <a class="base-btn" id="create-btn" href="/users/create">Thêm mới</a>
+   </div>
+   
 </body>
 
 </html>
