--- a/views/users/user.ejs
+++ b/views/users/user.ejs
@@ -25,7 +25,7 @@
     </nav>
     <div class="content-wrapper flex fD-column aI-center">
     <h2 style="margin: 10px auto">DANH SÁCH NGƯỜI DÙNG</h2>
-    <div id="table-wrapper">
+    <div id="table-wrapper" class="flex jC-center">
     <table>
         <thead>
             <tr>
