--- a/views/controll/home.ejs
+++ b/views/controll/home.ejs
@@ -21,11 +21,11 @@
         if (msg.data == "CUA DANG DONG" || msg.data == "CUA DANG MO") {
           document.getElementById("statedoor").innerText = msg.data;
         } 
-        else if (msg.data == "open" || msg.data == "close"){
+        else if (msg.data == "unlock" || msg.data == "lock"){
           // document.getElementById("command").innerHTML = msg.data;
-          if (msg.data == "close")
-            document.getElementById("OC-btn").innerText = "open";
-          else document.getElementById("OC-btn").innerText = "close";
+          if (msg.data == "lock")
+            document.getElementById("OC-btn").innerText = "unlock";
+          else document.getElementById("OC-btn").innerText = "lock";
           
         }
         else alert(msg.data);
@@ -34,16 +34,16 @@
 
       let cmo = {
         dv: "L",
-        st: "open",
+        st: "unlock",
       };
 
       let cmc = {
         dv: "L",
-        st: "close",
+        st: "lock",
       };
       function buttonOnclick(event) {
         let state = event.target.innerText;
-        if (state.toLowerCase() == "open") {
+        if (state.toLowerCase() == "unlock") {
           connection.send(JSON.stringify(cmo));
         } else connection.send(JSON.stringify(cmc));
       }
@@ -59,7 +59,7 @@
     </nav>
     <div class="content-wrapper flex fD-column aI-center jC-center">
       <p id="statedoor"></p>
-      <button class="base-btn" id="OC-btn" onclick="buttonOnclick(event)">OPEN</button>
+      <button class="base-btn" id="OC-btn" onclick="buttonOnclick(event)">Unlock</button>
       <p id="notice"></p>
     </div>
     
