--- a/views/controll/home.ejs
+++ b/views/controll/home.ejs
@@ -18,9 +18,13 @@
       connection.onopen = function () {};
       connection.onerror = function (error) {};
       connection.onmessage = function (msg) {
-        if (msg.data == "CUA DANG DONG" || msg.data == "CUA DANG MO") {
-          document.getElementById("statedoor").innerText = msg.data;
+        if (msg.data == "CUA DANG DONG") {
+          document.getElementById("statedoor").innerText = "CỬA ĐANG ĐÓNG";
+          document.getElementById("notice").innerText = ""
         } 
+        else if (msg.data == "CUA DANG MO") {
+          document.getElementById("statedoor").innerText = "CỬA ĐANG MỞ";
+        }
         else if (msg.data == "unlock" || msg.data == "lock"){
           // document.getElementById("command").innerHTML = msg.data;
           if (msg.data == "lock")
@@ -28,7 +32,7 @@
           else document.getElementById("OC-btn").innerText = "lock";
           
         }
-        else alert(msg.data);
+        else document.getElementById("notice").innerText = msg.data
     
       };
 
