--- a/public/css/users.css
+++ b/public/css/users.css
@@ -43,7 +43,9 @@ tr th:first-child{
 tr th{
     border-top-width: 2px;
 }
-
+tr td:nth-child(4){
+    text-align: center;
+}
 tr:last-child td{
     border-bottom-width: 2px;
 }
