--- a/views/controll/home.ejs
+++ b/views/controll/home.ejs
@@ -40,10 +40,14 @@
         }
         else if (msg.data == "auto") {
           now = new Date();
-          document.getElementById("notice").innerText = `CỬA ĐÃ ĐƯỢC TỪ ĐỘNG KHÓA LÚC ${now.getHours()}:${now.getMinutes()} ${now.getDate()}/${now.getMonth()}/${now.getYear()}`
+          document.getElementById("notice").innerText = `CỬA ĐÃ ĐƯỢC TỰ ĐỘNG KHÓA LÚC ${new Date().toLocaleString()}`
         }
         else if (msg.data == "timeout") document.getElementById("notice").innerText = "CỬA ĐÃ MỞ QUÁ 10 GIẤY, VUI LÒNG ĐÓNG CỬA"
-    
+        else if (msg.data == "thief") {
+          notice = document.getElementById("notice")
+          notice.setClass("danger")
+          notice.innerText = "CỬA ĐÃ MỞ DÙ CHỐT KHÓA ĐANG ĐÓNG!"
+        }
       };
 
       let cmo = {
