--- a/views/controll/home.ejs
+++ b/views/controll/home.ejs
@@ -44,7 +44,7 @@
         }
         else if (msg.data == "timeout") document.getElementById("notice").innerText = "CỬA ĐÃ MỞ QUÁ 10 GIẤY, VUI LÒNG ĐÓNG CỬA"
         else if (msg.data == "thief") {
-          notice.setClass("danger")
+          notice.className="danger"
           notice.innerText = "CỬA ĐÃ MỞ DÙ CHỐT KHÓA ĐANG ĐÓNG!"
         }
       };
